--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,9 +15,11 @@
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
         <!-- define your env variables for the test env here -->
-
+        <env name="TEST_BASE_URL" value="http://127.0.0.1:8000" />
+        <!--<env name="DATABASE_URL" value="pdo_pgsql://postgres:password@127.0.0.1:5432/fictio_test" />-->
         <!-- ###+ nelmio/cors-bundle ### -->
         <env name="CORS_ALLOW_ORIGIN" value="^https?://localhost:?[0-9]*$"/>
+
         <!-- ###- nelmio/cors-bundle ### -->
     </php>
 
