--- a/.env.dist
+++ b/.env.dist
@@ -20,7 +20,7 @@ MAILER_URL=null://localhost
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=pdo_pgsql://postgres:password@127.0.0.1:5432/fictio
+DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
