--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -7,7 +7,7 @@ parameters:
 
 doctrine:
     dbal:
-        url: '%env(DATABASE_URL)%'
+        url: '%env(TEST_DATABASE_URL)%'
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
