--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/debug": "^4.0",
