add check requirements

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.0",
+        "symfony/requirements-checker": "^1.1",
         "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
@@ -69,7 +70,8 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check": "script"
+            "security-checker security:check": "script",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
