--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=test
+APP_ENV=dev
 APP_SECRET=966536d311ddae0996d1ffd21efa1027
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
@@ -20,6 +20,7 @@ MAILER_URL=null://localhost
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio"
 TEST_DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio"
 ###< doctrine/doctrine-bundle ###
 
