--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,3 +27,6 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    Handler:
+        class: App\Component\Handler\BaseHandler
+        arguments: [ '@router.default', 'doctrine.orm.default_entity_manager' ]
