MI-76:installation lexik bundle

--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,9 @@ TEST_DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio_test"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=~
+###< lexik/jwt-authentication-bundle ###
