--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 #php storm
 .idea/
 .idea/*
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
