MI-124: suite du travail sur le Guard Authentication / manque start()

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,12 +2,28 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory: { memory: ~ }
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+#        login:
+#            pattern:  ^/login
+#            stateless: true
+#            anonymous: true
+#            json_login:
+#                check_path:               /login_check
+#                success_handler:          lexik_jwt_authentication.handler.authentication_success
+#                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+
         main:
             anonymous: true
+
+            guard:
+                authenticators:
+                - 'App\Security\JwtTokenAuthenticator'
+#                - 'lexik_jwt_authentication.jwt_token_authenticator'
 
             # activate different ways to authenticate
 
