--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
   - ./bin/phpunit install
 
 before_script:
-  - psql -c "CREATE DATABASE fictio_test;" -U postgres
+#  - psql -c "CREATE DATABASE fictio_test;" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD 'bar';" -U postgres
 
 script:
