--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,16 +22,15 @@ security:
 #                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
         main:
-            anonymous: true
+            anonymous: ~
+            http_basic: ~
 
-            guard:
-                authenticators:
-#                - 'App\Security\JwtTokenAuthenticator'
-                - 'App\Security\LoginFormAuthenticator'
+#            guard:
+#                authenticators:
+#                - 'App\Security\LoginFormAuthenticator'
 
             # activate different ways to authenticate
-
-            # http_basic: true
+#            http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             # form_login: true
@@ -40,7 +39,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+#        - { path: ^/fictions, roles: ROLE_ADMIN }
 #        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/jetons, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST] }
 #        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST, PUT, DELETE] }
 
     encoders:
