MI-33:(authentication)correction tests avec token pour fiction

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,12 +22,12 @@ security:
 #                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
         main:
-            anonymous: ~
-            http_basic: ~
+#            anonymous: ~
+#            http_basic: ~
 
-#            guard:
-#                authenticators:
-#                - 'App\Security\LoginFormAuthenticator'
+            guard:
+                authenticators:
+                - 'App\Security\LoginFormAuthenticator'
 
             # activate different ways to authenticate
 #            http_basic: true
