--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "~6.0",
         "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/cors-bundle": "^1.5",
+        "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^4.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^4.0",
@@ -25,6 +26,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.0",
         "symfony/requirements-checker": "^1.1",
+        "symfony/security": "^4.0",
         "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
