--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
 #                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
         main:
-#            anonymous: ~
+            anonymous: true
 #            http_basic: ~
 
             guard:
