Amélioration documentation installation

--- a/.env.dist
+++ b/.env.dist
@@ -4,7 +4,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=966536d311ddae0996d1ffd21efa1027
+APP_SECRET=~
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
