chore(documentation): add docker documentation installation

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 
 #php storm
 .idea/
-.idea/*
+.zcache
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
