--- a/.env.dist
+++ b/.env.dist
@@ -21,7 +21,7 @@ MAILER_URL=null://localhost
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio"
-TEST_DATABASE_URL="pgsql://postgres:password@127.0.0.1:5432/fictio_test"
+DATABASE_URL_TEST="pgsql://postgres:password@127.0.0.1:5432/fictio_test"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
