--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         "friendsofsymfony/rest-bundle": "^2.3",
         "guzzlehttp/guzzle": "~6.0",
         "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.3",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^4.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/debug": "^4.0",
         "symfony/debug-pack": "*",
@@ -20,7 +20,6 @@
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
-        "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.1",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
