--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,6 +30,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
 #        - { path: ^/fictions, roles: ROLE_ADMIN }
+#        - { path: ^/projets, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/jetons, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST] }
 #        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [POST, PUT, DELETE] }
