--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^1.0",
-        "friendsofsymfony/rest-bundle": "^2.3",
+        "friendsofsymfony/elastica-bundle": "^5.0",
+        "friendsofsymfony/rest-bundle": "^2.4",
         "guzzlehttp/guzzle": "~6.0",
         "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/api-doc-bundle": "^3.3",
         "nelmio/cors-bundle": "^1.5",
+        "pagerfanta/pagerfanta": "^1.0.5",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^4.1",
         "stof/doctrine-extensions-bundle": "^1.3",
@@ -32,8 +34,7 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.0",
-        "white-october/pagerfanta-bundle": "^1.1"
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
