config Elastica for prod

--- a/.env.dist
+++ b/.env.dist
@@ -33,3 +33,8 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=~
 ###< lexik/jwt-authentication-bundle ###
+
+###> elastica ###
+ELASTICA_HOST=localhost
+ELASTICA_PORT=9200
+###< elastica ###
