--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,8 @@
         <env name="KERNEL_CLASS" value="App\Kernel" />
         <env name="APP_ENV" value="test" />
         <env name="APP_DEBUG" value="1" />
+        <env name="ELASTICA_HOST" value="localhost" />
+        <env name="ELASTICA_PORT" value="9200" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
         <!-- define your env variables for the test env here -->
