Elastica conf ready for prod and lieux, personnages, evenements added to indexation

--- a/.env.dist
+++ b/.env.dist
@@ -37,4 +37,5 @@ JWT_PASSPHRASE=~
 ###> elastica ###
 ELASTICA_HOST=localhost
 ELASTICA_PORT=9200
+ELASTICA_TRANSPORT=Https #Http en local
 ###< elastica ###
