--- a/.env.dist
+++ b/.env.dist
@@ -39,4 +39,5 @@ JWT_PASSPHRASE=~
 ELASTICA_HOST=localhost
 ELASTICA_PORT=9200
 ELASTICA_TRANSPORT=Https #Http en local
+ELASTICA_AUHTORIZATION=~
 ###< elastica ###
