minor change for docker

--- a/.env.docker.dist
+++ b/.env.docker.dist
@@ -21,3 +21,10 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=~
 ###< lexik/jwt-authentication-bundle ###
+
+###> elastica ###
+ELASTICA_HOST=localhost
+ELASTICA_PORT=9200
+ELASTICA_TRANSPORT=Http
+ELASTICA_AUHTORIZATION=''
+###< elastica ###
