--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,8 @@
         <env name="APP_DEBUG" value="1" />
         <env name="ELASTICA_HOST" value="localhost" />
         <env name="ELASTICA_PORT" value="9200" />
+        <env name="ELASTICA_TRANSPORT" value="Http" />
+        <env name="ELASTICA_AUHTORIZATION" value="" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
         <!-- define your env variables for the test env here -->
