Add first fixtures

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+.DS_Store
+config/.DS_Store
